fix(VField): correct baseline alignment

--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -15,7 +15,6 @@
     letter-spacing: $field-letter-spacing
     max-width: $field-max-width
     border-radius: $field-border-radius
-    contain: layout
     flex: 1 0
     grid-area: control
     position: relative
